--- a/index.html
+++ b/index.html
@@ -3,21 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Taking Integration</title>
+    <title>Pearl Notes - build b10da11</title>
     <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: #333333; /* Dark gray background */
+            color: #ffffff; /* White text */
+            margin: 0;
+            padding: 20px;
+        }
+
+        .note {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
         .note-title {
             font-weight: bold;
+            font-size: 32px; /* Larger font size for title */
+            color: #333333;
+            margin-bottom: 10px;
         }
+
         .note-contents {
             font-style: italic;
+            font-size: 20px; /* Larger font size for contents */
+            color: #666666;
         }
+
         .note-contents u {
             text-decoration: underline;
+        }
+
+        .note-date {
+            font-size: 14px; /* Date font size */
+            color: #aaaaaa; /* Light gray text */
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
     <div class="note">
+        <div class="note-date" id="note-date"></div> <!-- Date of last opening -->
         <div class="note-title">%note-title</div>
         <div class="note-contents">%note-contents</div>
     </div>
@@ -26,6 +56,7 @@
         document.addEventListener("DOMContentLoaded", function() {
             var noteTitleElement = document.querySelector('.note-title');
             var noteContentsElement = document.querySelector('.note-contents');
+            var noteDateElement = document.getElementById('note-date');
             
             // Get the parameters from the URL
             var urlParams = new URLSearchParams(window.location.search);
@@ -45,6 +76,13 @@
             // Update HTML with the interpreted values
             noteTitleElement.innerHTML = noteTitle;
             noteContentsElement.innerHTML = noteContents;
+
+            // Get current date and time
+            var currentDate = new Date();
+            var dateString = currentDate.toLocaleString('en-US', {month: 'numeric', day: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric'});
+
+            // Display date of last opening
+            noteDateElement.innerHTML = "Last opened: " + dateString;
         });
     </script>
 </body>
